🐛 FIX: alignwide, posts block flexfix

--- a/assets/styles/general.scss
+++ b/assets/styles/general.scss
@@ -120,7 +120,7 @@ body.frontend {
   .alignwide {
     margin-left: calc(-100vw / 2 + 100% / 2);
     margin-right: calc(-100vw / 2 + 100% / 2);
-    max-width: calc(100vw - (100vw - 100%));
+    max-width: 100vw;
   }
   .alignfull {
     margin-left: calc(-100vw / 2 + 100% / 2);
